# Rust-Devcontainer-Template

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check.yml  clippy.yml  rustfmt.yml  tests.yml
tests/: test.rs
workflows/: clippy.yml  dependabot.yml  rustfmt.yml
